Infrastructure/K8s/mcabank-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcabank-gateway
  labels:
    app: mcabank-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcabank-gateway
  template:
    metadata:
      labels:
        app: mcabank-gateway
    spec:
      containers:
        - name: mcabank-gateway
          image: rasteiro11/mcabank-gateway:20250914184408
          imagePullPolicy: Always
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: mcabank-gateway-service
  labels:
    app: mcabank-gateway
spec:
  type: NodePort
  ports:
    - port: 5004
      targetPort: 5004
      nodePort: 30088
  selector:
    app: mcabank-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcabank-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mcabank.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcabank-gateway-service
                port:
                  number: 5004
